--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -11,4 +11,6 @@
         </p>
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
+
+    {% include "pagination.html" with page=page_obj %}
 {% endblock %}
